5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1594_1801.log
== SUBMITION (2019-04-04 16:23:58) 
-- CODE:
print("Abra+porta"*4)
-- EXECUTION TIME:
0.148263
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra+portaAbra+portaAbra+portaAbra+porta
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra+portaAbra+portaAbra+portaAbra+porta
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra+portaAbra+portaAbra+portaAbra+porta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:24:00) 
-- CODE:
print("Abra+porta"*4)
-- OUTPUT:
Abra+portaAbra+portaAbra+portaAbra+porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:24:28) 
-- CODE:
print("Abra"+"porta"*4)
-- EXECUTION TIME:
0.13103
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abraportaportaportaporta
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abraportaportaportaporta
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abraportaportaportaporta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:24:29) 
-- CODE:
print("Abra"+"porta"*4)
-- OUTPUT:
Abraportaportaportaporta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:24:39) 
-- CODE:
print("Abra" + "porta"*4)
-- OUTPUT:
Abraportaportaportaporta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:24:43) 
-- CODE:
print("Abra " + "porta"*4)
-- OUTPUT:
Abra portaportaportaporta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:24:53) 
-- CODE:
print("Abra " + " porta"*4)
-- OUTPUT:
Abra  porta porta porta porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:25:06) 
-- CODE:
print("Abra "*4 + " porta"*4)
-- OUTPUT:
Abra Abra Abra Abra  porta porta porta porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:25:35) 
-- CODE:
print(("Abra "+" porta")*)
-- ERROR:
File "XXXX", line 1
    print(("Abra "+" porta")*)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:25:47) 
-- CODE:
print(("Abra "+" porta")*4)
-- OUTPUT:
Abra  portaAbra  portaAbra  portaAbra  porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:25:56) 
-- CODE:
print(("Abra "+" porta ")*4)
-- OUTPUT:
Abra  porta Abra  porta Abra  porta Abra  porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:26:03) 
-- CODE:
print(("Abra "+"porta ")*4)
-- OUTPUT:
Abra porta Abra porta Abra porta Abra porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:26:08) 
-- CODE:
print(("Abra "+"porta ")*4)
-- EXECUTION TIME:
0.157727
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra porta Abra porta Abra porta Abra porta
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra porta Abra porta Abra porta Abra porta
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra porta Abra porta Abra porta Abra porta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:27:30) 
-- CODE:
string="Abra "+"porta"
print(string*4)
-- OUTPUT:
Abra portaAbra portaAbra portaAbra porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:27:39) 
-- CODE:
string="Abra "+"porta "
print(string*4)
-- OUTPUT:
Abra porta Abra porta Abra porta Abra porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:27:41) 
-- CODE:
string="Abra "+"porta "
print(string*4)
-- EXECUTION TIME:
0.204755
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra porta Abra porta Abra porta Abra porta
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra porta Abra porta Abra porta Abra porta
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra porta Abra porta Abra porta Abra porta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:28:37) 
-- CODE:
string="Abra "+"porta "
print(string*4)
-- OUTPUT:
Abra porta Abra porta Abra porta Abra porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:28:40) 
-- CODE:
string="Abra "+"porta "
print(string*4)
-- EXECUTION TIME:
0.181213
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra porta Abra porta Abra porta Abra porta
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra porta Abra porta Abra porta Abra porta
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra porta Abra porta Abra porta Abra porta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:28:40) 
-- CODE:
string="Abra "+"porta "
print(string*4)
-- OUTPUT:
Abra porta Abra porta Abra porta Abra porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:30:07) 
-- CODE:
string=input("")
print(string*4)
-- EXECUTION TIME:
0.152973
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carrocarrocarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixacaixacaixacaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:30:07) 
-- CODE:
string=input("")
print(string*4)
-- OUTPUT:
livrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:37:38) 
-- CODE:
string=input("")
print(string*4)
-- OUTPUT:
livrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
